--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -586,7 +586,8 @@ video {
 
 * {
   box-sizing: border-box;
-  font-family: Poppins, sans-serif;
+  font-family: Inter;
+  font-weight: 500;
   transition: all .3s ease-out;
   font-size: inherit;
 }
@@ -668,13 +669,28 @@ a {
   grid-column-gap: 25px;
 }
 
+.grid20 {
+  grid-template-columns: 4.5fr 1fr;
+  grid-column-gap: 100px;
+}
+
 .grid3 {
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 50px;
 }
 
+.grid-title-change {
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-column-gap: 10px;
+  grid-row-gap: 10px;
+}
+
 .grid30 {
   grid-template-columns: 1fr 1fr 1fr;
+}
+
+.grid31 {
+  grid-template-columns: 3fr 1fr;
 }
 
 .grid4 {
@@ -698,15 +714,19 @@ a {
 }
 
 .txt-medium {
-  font-weight: Medium;
+  font-weight: 500;
 }
 
 .txt-light {
-  font-weight: Light;
+  font-weight: 300;
 }
 
-.txt-semi {
-  font-weight: SemiBold;
+.txt-regular {
+  font-weight: 400;
+}
+
+.txt-semi-bold {
+  font-weight: 600;
 }
 
 .txt-italic {
@@ -718,7 +738,7 @@ a {
 }
 
 .txt-bold {
-  font-weight: bold;
+  font-weight: 700;
 }
 
 .txt-weight-500 {
@@ -774,8 +794,16 @@ a {
   font-size: 20px;
 }
 
+.txt-18 {
+  font-size: 18px;
+}
+
 .txt-16 {
   font-size: 16px;
+}
+
+.txt-14 {
+  font-size: 14px;
 }
 
 .main-color {
@@ -826,6 +854,7 @@ a {
 }
 
 .btn-sign:hover {
+  border-radius: 50px;
   background-color: var(--white);
   color: var(--main-color);
 }
@@ -845,6 +874,23 @@ a {
   border-radius: 50px;
   padding: 10px 50px 10px 10px;
   font-size: 20px;
+}
+
+.btn-light-design:hover, .btn-dark-design:hover {
+  border: 1px solid var(--main-color);
+  color: var(--white);
+  background-color: var(--main-color);
+}
+
+.btn-border-black {
+  padding: 10px;
+  border: 3px solid var(--black);
+}
+
+.btn-border-black:hover {
+  border-radius: 30px;
+  background-color: var(--black);
+  color: var(--white);
 }
 
 .pt-140 {
@@ -889,7 +935,7 @@ a {
 }
 
 .img-hover:hover {
-  transform: scale(1.1);
+  transform: scale(1.05);
   opacity: 0.5;
 }
 
@@ -968,6 +1014,11 @@ a {
   line-height: 1.1;
   color: var(--white);
   background-color: var(--grid3-color);
+}
+
+.try-out:hover {
+  transform: scale(1.05);
+  background-color: var(--main-color);
 }
 
 .individual {
@@ -1074,12 +1125,61 @@ a {
 }
 
 .btn-footer:hover {
+  border-radius: 80px;
   background-color: var(--white);
   color: var(--main-color);
 }
 
 .learn-more:hover {
   color: var(--grid1-color);
+}
+
+.div-border {
+  border: 1px solid black;
+}
+
+.justify-left {
+  display: flex;
+  justify-content: left;
+}
+
+.hr-black {
+  border-top: 1px solid var(--black) !important;
+}
+
+.border-elliptic {
+  padding: 0 0 0 10px;
+  border: 1px solid var(--black);
+  border-radius: 20px;
+}
+
+.border-left {
+  position: relative;
+  border-left: 1px solid var(--black);
+}
+
+.txt-position {
+  position: absolute;
+  bottom: 10px;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 100%;
+}
+
+textarea {
+  padding: 10px;
+  border: 1px solid var(--grid1-color);
+  border-radius: 10px;
+  min-height: 60px;
+  outline: none;
+  width: 90%;
+  max-width: 100%;
+}
+
+.chat-scroll {
+  overflow-y: auto;
+  max-height: 70vh;
+  word-break: break-all;
 }
 
 .space-y-0 > :not([hidden]) ~ :not([hidden]) {
