--- a/src/assets/css/output.css
+++ b/src/assets/css/output.css
@@ -672,6 +672,7 @@ a {
 .grid20 {
   grid-template-columns: 4.5fr 1fr;
   grid-column-gap: 100px;
+  grid-auto-rows: auto;
 }
 
 .grid3 {
@@ -772,7 +773,6 @@ a {
 
 .txt-34 {
   font-size: 34px;
-  min-height: 120px;
 }
 
 .txt-30 {
@@ -884,7 +884,7 @@ a {
 }
 
 .btn-border-black {
-  padding: 10px;
+  padding: 0 10px;
   border: 3px solid var(--black);
 }
 
@@ -892,6 +892,21 @@ a {
   border-radius: 30px;
   background-color: var(--black);
   color: var(--white);
+}
+
+.input-width {
+  outline: none;
+}
+
+.color-scroll {
+  overflow-y: scroll;
+  max-height: 70vh;
+  min-height: 60px;
+  word-break: break-all;
+}
+
+.header-p {
+  padding: 25px;
 }
 
 .pt-140 {
@@ -980,7 +995,9 @@ a {
 }
 
 .icon-txt {
+  margin: 0 auto;
   width: 90%;
+  text-align: center;
 }
 
 .bg-middle {
@@ -1037,7 +1054,6 @@ a {
 .individual, .community, .enterprise {
   position: relative;
   padding: 100px 70px;
-  height: auto;
   font-size: 24px;
 }
 
@@ -1178,7 +1194,7 @@ textarea {
 
 .chat-scroll {
   overflow-y: auto;
-  max-height: 70vh;
+  max-height: 72vh;
   word-break: break-all;
 }
 
@@ -1233,58 +1249,12 @@ textarea {
   align-items: center;
 }
 
-.owl-carousel .owl-item img {
-  margin: 20px auto;
-  width: 80px !important;
-  text-align: center !important;
+.sign-contact-show {
+  display: none;
 }
 
-.owl-theme .owl-dots .owl-dot.active span, .owl-theme .owl-dots .owl-dot:hover span {
-  background: #808080 !important;
-}
-
-.owl-theme .owl-dots .owl-dot span {
-  display: block !important;
-  position: relative;
-  margin: -30px 10px 0;
-  outline: none !important;
-}
-
-.owl-carousel .owl-nav button.owl-next, .owl-carousel .owl-nav button.owl-prev {
-  position: absolute;
-  margin-top: 0;
-  border: none;
-  padding-top: 15px;
-  width: 40px;
-  font-size: 40px !important;
-  color: inherit;
-  background-repeat: no-repeat;
-  background-position: center;
-}
-
-.owl-carousel .owl-nav button.owl-prev {
-  display: none !important;
-  top: 50%;
-  transform: translateY(-120%);
-  left: -15px;
-}
-
-.owl-carousel .owl-nav button.owl-next {
-  display: none !important;
-  top: 50%;
-  transform: translateY(-120%);
-  right: -15px;
-}
-
-.owl-theme .owl-dots .owl-dot {
-  outline: none !important;
-}
-
-.owl-dots, .owl-nav {
-  display: flex;
-  margin: 0 !important;
-  text-align: 0 !important;
-  justify-content: center;
+.sign-contact-hidden {
+  display: block;
 }
 
 @media (max-width: 1440px) {
@@ -1304,10 +1274,6 @@ textarea {
     font-size: 48px !important;
   }
 
-  .txt-54 {
-    font-size: 42px !important;
-  }
-
   .txt-40 {
     font-size: 32px !important;
   }
@@ -1325,7 +1291,7 @@ textarea {
   }
 
   .btn-sign {
-    font-size: 40px !important;
+    font-size: 50px !important;
   }
 
   .grid4 {
@@ -1375,9 +1341,34 @@ textarea {
     max-width: 30% !important;
     min-height: 100px !important;
   }
+
+  .btn-sign.btn-p {
+    padding: 10px !important;
+    min-width: 70% !important;
+  }
+
+  .try-body {
+    padding: 200px 40px 120px !important;
+  }
+
+  .grid20 {
+    grid-column-gap: 30px !important;
+  }
 }
 
 @media (max-width: 1200px) {
+  .txt-34.txt-regular {
+    font-size: 24px !important;
+  }
+
+  .flex-grid.grid2.hex {
+    grid-template-columns: 1fr 1fr !important;
+  }
+
+  .chat-scroll {
+    max-height: 60vh;
+  }
+
   .embed-width {
     max-width: 80% !important;
   }
@@ -1447,9 +1438,72 @@ textarea {
   .phone-p {
     padding-top: 130px !important;
   }
+
+  .slick-dots li button:before {
+    font-size: 15px !important;
+  }
+
+  .slider-show {
+    display: block !important;
+  }
+
+  .slider-hidden {
+    display: none !important;
+  }
+
+  .slick-dots {
+    bottom: -45px !important;
+  }
+
+  .btn-sign.btn-p {
+    min-width: 80% !important;
+  }
+
+  .individual, .community, .enterprise {
+    padding: 100px 30px !important;
+  }
 }
 
 @media (max-width: 992px) {
+  .try-body {
+    padding: 200px 15px 120px !important;
+  }
+
+  .btn-light-design, .btn-dark-design {
+    padding: 10px 20px !important;
+  }
+
+  .header-p {
+    padding: 15px !important;
+  }
+
+  .grid-title-change {
+    grid-template-columns: 1fr 1fr !important;
+  }
+
+  .mt-6 {
+    margin-top: 15px !important;
+  }
+
+  .txt-34.txt-regular {
+    font-size: 20px !important;
+  }
+
+  .txt-54 {
+    font-size: 40px !important;
+  }
+
+  .individual, .community, .enterprise {
+    padding: 100px 15px !important;
+    font-size: 18px !important;
+  }
+
+  .btn-sign.btn-p {
+    height: 80px !important;
+    min-width: 60% !important;
+    font-size: 35px !important;
+  }
+
   .pt-140 {
     padding-top: 110px !important;
   }
@@ -1464,10 +1518,6 @@ textarea {
 
   .grid3.icons {
     grid-template-columns: 1fr 1fr !important;
-  }
-
-  .phone-icon-hide {
-    display: none;
   }
 
   .phone-icon-show {
@@ -1493,6 +1543,49 @@ textarea {
 }
 
 @media (max-width: 768px) {
+  .phone-icon-hide {
+    display: none;
+  }
+
+  .sign-contact-show > div > div.slick-list > div.slick-track {
+    background-color: var(--grid2-color) !important;
+  }
+
+  .sign-contact-show {
+    display: block !important;
+  }
+
+  .sign-contact-hidden {
+    display: none !important;
+  }
+
+  .individual, .community, .enterprise {
+    padding: 70px 60px 150px !important;
+    height: auto !important;
+    color: var(--white);
+    background-color: var(--grid2-color) !important;
+    font-size: 28px !important;
+  }
+
+  .btn-sign.btn-p {
+    bottom: 150px !important;
+    height: 100px !important;
+    min-width: 50% !important;
+    font-size: 50px !important;
+  }
+
+  .sign-contact-show > div > ul.slick-dots {
+    bottom: 65px !important;
+  }
+
+  .sign-contact-show > div > ul.slick-dots li.slick-active button:before {
+    color: #fff !important;
+  }
+
+  .sign-contact-show > div > ul.slick-dots li button:before {
+    color: #fff !important;
+  }
+
   .txt-90 {
     font-size: 60px !important;
   }
@@ -1510,7 +1603,7 @@ textarea {
   }
 
   .txt-54 {
-    font-size: 38px !important;
+    font-size: 54px !important;
   }
 
   .txt-40 {
@@ -1543,7 +1636,7 @@ textarea {
 
   .btn-sign {
     padding: 7px 30px !important;
-    font-size: 35px !important;
+    font-size: 45px !important;
   }
 
   .pt-140 {
@@ -1554,12 +1647,8 @@ textarea {
     padding: 0 20px !important;
   }
 
-  .slider-show {
-    display: block !important;
-  }
-
-  .slider-hidden {
-    display: none !important;
+  .expand {
+    text-align: center;
   }
 
   .grid3 {
@@ -1637,9 +1726,17 @@ textarea {
     width: 100% !important;
     max-width: 130px !important;
   }
+
+  .slick-dots {
+    bottom: -30px !important;
+  }
 }
 
 @media (max-width: 600px) {
+  .btn-p {
+    height: 80px !important;
+  }
+
   .pt-140 {
     padding-top: 70px !important;
   }
@@ -1660,10 +1757,6 @@ textarea {
     font-size: 34px !important;
   }
 
-  .txt-54 {
-    font-size: 30px !important;
-  }
-
   .txt-40 {
     font-size: 24px !important;
   }
@@ -1675,7 +1768,11 @@ textarea {
   .btn-sign {
     border-radius: 10px !important;
     padding: 5px 20px !important;
-    font-size: 25px !important;
+    font-size: 45px !important;
+  }
+
+  .btn-sign:hover {
+    border-radius: 50px !important;
   }
 
   .txt-30 {
@@ -1733,6 +1830,18 @@ textarea {
 }
 
 @media (max-width: 480px) {
+  .individual, .community, .enterprise {
+    padding: 70px 30px 130px !important;
+    min-width: 320px !important;
+    font-size: 20px !important;
+  }
+
+  .btn-sign.btn-p {
+    bottom: 130px !important;
+    height: 80px !important;
+    font-size: 35px !important;
+  }
+
   .txt-90 {
     font-size: 40px !important;
   }
@@ -1750,12 +1859,12 @@ textarea {
   }
 
   .txt-54 {
-    font-size: 26px !important;
+    font-size: 48px !important;
   }
 
   .btn-sign {
     padding: 3px 15px !important;
-    font-size: 22px !important;
+    font-size: 40px !important;
   }
 
   .txt-34 {
@@ -1801,6 +1910,13 @@ textarea {
 
   .btn-footer {
     max-width: 60% !important;
+  }
+}
+
+@media (max-width: 360px) {
+  .individual, .community, .enterprise {
+    padding: 70px 30px 130px !important;
+    min-width: 320px !important;
   }
 }
 
